--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -19,7 +19,7 @@
     <div class="d-flex justify-content-center my-3">
       {% for beer in limited_edition_beers %}
       <div class="{% if forloop.counter > 2 %}d-none d-lg-block{% endif %} card border-0 align-items-center mx-1 mx-sm-4">
-        <img src="{{ beer.image.url }}" class="card-img-top border-black my-2" alt="{{ beer.name }}" style="max-width: 265px; height: auto;">
+        <img src="{{ beer.image.url }}" class="card-img-top border-black my-2 product-image" alt="{{ beer.name }}">
         <div class="card-body py-2">
           <h5 class="card-title my-0">{{ beer.name }}</h5>
           <p class="card-text">{{ beer.type }} / {{ beer.alcohol_content }}%</p>
