Updated styling for beers on homepage and beers page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -102,8 +102,13 @@ hr {
 }
 
 .product-image {
-    max-width: 265px;
+    max-width: 300px;
+    min-width: 230px;
     height: auto;
+}
+
+.product-container {
+    max-width: 300px;
 }
 
 .large-product-image {
