--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -16,13 +16,15 @@
   <div class="text-center text-uppercase col-12" id="limited-edition-content">
     <h3 class="mb-3">Limited Edition Brews</h3>
     <hr class="bg-black my-0">
-    <div class="d-flex justify-content-center my-3">
+    <div class="col-12 col-lg-8 d-flex flex-wrap flex-lg-nowrap justify-content-center my-3 mx-auto">
       {% for beer in limited_edition_beers %}
-      <div class="{% if forloop.counter > 2 %}d-none d-lg-block{% endif %} card border-0 align-items-center mx-1 mx-sm-4">
-        <img src="{{ beer.image.url }}" class="card-img-top border-black my-2 product-image" alt="{{ beer.name }}">
-        <div class="card-body py-2">
-          <h5 class="card-title my-0">{{ beer.name }}</h5>
-          <p class="card-text">{{ beer.type }} / {{ beer.alcohol_content }}%</p>
+      <div class="col-12 col-sm-6 col-md-4 h-100 product-container p-0 mx-4 mb-4 {% if forloop.counter > 2 %}d-none d-lg-flex{% endif %}">
+        <div class="card border-0 align-items-center">
+          <img src="{{ beer.image.url }}" class="card-img-top border-black my-2 product-image" alt="{{ beer.name }}">
+          <div class="card-body p-0">
+            <h5 class="card-title my-0">{{ beer.name }}</h5>
+            <p class="card-text">{{ beer.type }} / {{ beer.alcohol_content }}%</p>
+          </div>
         </div>
       </div>
       {% endfor %}
@@ -62,26 +64,14 @@
   <div class="text-center text-uppercase col-12" id="merchandise-content">
     <h3 class="mb-3">Our Merchandise</h3>
     <hr class="bg-black my-0">
-    <div class="d-flex justify-content-center my-3">
-      <div class="card border-0 align-items-center mr-2 mx-sm-4 bg-gray">
-        <div class="card-img-top border-black bg-white my-2" style="width: 100%; height: 200px;"></div>
-        <!-- <img src="..." class="card-img-top border-black my-2" alt="..."> -->
-        <div class="card-body py-0">
-          <h5 class="card-title my-0">Merch Item Name</h5>
-        </div>
-      </div>
-      <div class="card border-0 align-items-center ml-2 mx-sm-4 bg-gray">
-        <div class="card-img-top border-black bg-white my-2" style="width: 100%; height: 200px;"></div>
-        <!-- <img src="..." class="card-img-top border-black my-2" alt="..."> -->
-        <div class="card-body py-0">
-          <h5 class="card-title my-0">Merch Item Name</h5>
-        </div>
-      </div>
-      <div class="d-none d-lg-block card border-0 align-items-center mx-sm-4 bg-gray">
-        <div class="card-img-top border-black bg-white my-2" style="width: 100%; height: 200px;"></div>
-        <!-- <img src="..." class="card-img-top border-black my-2" alt="..."> -->
-        <div class="card-body py-0">
-          <h5 class="card-title my-0">Merch Item Name</h5>
+    <div class="col-12 col-lg-8 d-flex flex-wrap flex-lg-nowrap justify-content-center my-3 mx-auto">
+      <div class="col-12 col-sm-6 col-md-4 h-100 product-container p-0 mx-4 mb-4 {% if forloop.counter > 2 %}d-none d-lg-flex{% endif %}">
+        <div class="card border-0 align-items-center">
+          <div class="card-img-top border-black my-2 product-image" style="max-height: 300px; min-height: 235px;"></div>
+          <!-- <img src="{{ merch.image.url }}" class="card-img-top border-black my-2 product-image" alt="{{ merch.name }}"> -->
+          <div class="card-body p-0">
+            <h5 class="card-title my-0">Merch Item Name</h5>
+          </div>
         </div>
       </div>
     </div>
