--- a/inventory/templates/inventory/beers.html
+++ b/inventory/templates/inventory/beers.html
@@ -11,7 +11,7 @@
         <div class="card border-0 align-items-center w-100 mb-4 bg-gray">
           <img src="{{ core_range_beer.image.url }}" class="card-img-top border-black large-product-image mt-2" alt="{{ core_range_beer.name }}">
           <div class="card-body p-0 my-3">
-            <h5 class="card-title my-0">Core Range</h5>
+            <h5 class="card-title mb-2">Core Range</h5>
             <p class="card-text">A collection of finely crafted ales that are always available. These staples showcase our dedication to quality and innovation with consistent flavours and exceptional taste.</p>
           </div>
           <a class="btn-gray" href="#">Shop Now</a>
@@ -21,7 +21,7 @@
         <div class="card border-0 align-items-center w-100 mb-4 bg-gray">
           <img src="{{ limited_edition_beer.image.url }}" class="card-img-top border-black large-product-image mt-2" alt="{{ limited_edition_beer.name }}">
           <div class="card-body p-0 my-3">
-            <h5 class="card-title my-0">Limited Edition</h5>
+            <h5 class="card-title mb-2">Limited Edition</h5>
             <p class="card-text">Unique, small-batch brews that push the boundaries of flavour and creativity. These exclusive releases are available for a limited time only.</p>
           </div>
           <a class="btn-gray" href="#">Shop Now</a>
@@ -34,13 +34,17 @@
 <div class="overflow-hidden position-relative py-4" id="beers-section">
   <div class="text-center text-uppercase col-12" id="beers-content">
     <hr class="bg-black my-0">
-    <div class="d-flex justify-content-center my-3">
+    <div class="col-12 col-lg-8 d-flex flex-wrap justify-content-center my-3 mx-auto">
       {% for beer in beers %}
-      <div class="card border-0 align-items-center mr-2 mx-sm-4">
-        <img src="{{ beer.image.url }}" class="card-img-top border-black my-2 product-image" alt="{{ beer.name }}">
-        <div class="card-body py-0">
-          <h5 class="card-title my-0">{{ beer.name }}</h5>
-          <p class="card-text">{{ beer.type }} / {{ beer.alcohol_content }}%</p>
+      <div class="col-12 col-sm-6 col-md-4 d-flex d-flex-column h-100 product-container p-0 mx-4 mb-4">
+        <div class="card border-0 align-items-center">
+          <img src="{{ beer.image.url }}" class="card-img-top border-black my-2 product-image" alt="{{ beer.name }}">
+          <div class="card-body p-0">
+            <h5 class="card-title my-0">{{ beer.name }}</h5>
+            <p class="card-text mb-2">{{ beer.type }} / {{ beer.alcohol_content }}%</p>
+            <hr class="bg-black my-0">
+            <p class="card-text mt-2">£{{ beer.price }}</p>
+          </div>
         </div>
       </div>
       {% endfor %}
