--- a/inventory/templates/inventory/merch.html
+++ b/inventory/templates/inventory/merch.html
@@ -2,27 +2,29 @@
 {% load static %}
 
 {% block content %}
-<div class="overflow-hidden position-relative py-4" id="our-merch-section">
+<div class="overflow-hidden position-relative py-4 bg-gray" id="our-merch-section">
   <div class="text-center text-uppercase col-12" id="our-merch-content">
     <h3 class="mb-3">Our merch</h3>
     <hr class="bg-black my-0">
-    <div class="d-flex justify-content-center my-3">
-      <div class="card border-0 align-items-center mr-2 mx-sm-4">
-        <div class="card-img-top border-black bg-white my-2" style="width: 100%; height: 200px;"></div>
-        <!-- <img src="..." class="card-img-top border-black my-2" alt="..."> -->
-        <div class="card-body py-0">
-          <h5 class="card-title my-0">Apparel & Accesories</h5>
-          <p class="card-text">Show off your love for Alchemy Aleworks with our stylish and practical gear. Perfect for any fan, our apparel and accessories combine comfort and functionality, allowing you to represent your favourite brewery wherever you go.</p>
-          <a class="btn-gray" href="#">Shop Now</a>
+    <div class="d-flex flex-wrap justify-content-center my-3">
+      <div class="col-8 col-lg-5 col-xl-4 d-flex d-flex-column mx-sm-4 h-100 large-product-container">
+        <div class="card border-0 align-items-center w-100 mb-4 bg-gray">
+          <img src="{{ random_apparel.image.url }}" class="card-img-top border-black large-product-image mt-2" alt="{{ random_apparel.name }}">
+          <div class="card-body py-0 my-3">
+            <h5 class="card-title mb-2">Apparel & Accesories</h5>
+            <p class="card-text">Show off your love for Alchemy Aleworks with our stylish and practical gear. Perfect for any fan, our apparel and accessories combine comfort and functionality, allowing you to represent your favourite brewery wherever you go.</p>
+            <a class="btn-gray" href="#">Shop Now</a>
+          </div>
         </div>
       </div>
-      <div class="card border-0 align-items-center ml-2 mx-sm-4">
-        <div class="card-img-top border-black bg-white my-2" style="width: 100%; height: 200px;"></div>
-        <!-- <img src="..." class="card-img-top border-black my-2" alt="..."> -->
-        <div class="card-body py-0">
-          <h5 class="card-title my-0">Drinkware</h5>
-          <p class="card-text">Enhance your drinking experience with our specially designed items. Crafted to complement our brews, these pieces are perfect additions to any home bar, ensuring every sip is enjoyed to the fullest</p>
-          <a class="btn-gray" href="#">Shop Now</a>
+      <div class="col-8 col-lg-5 col-xl-4 d-flex d-flex-column mx-sm-4 h-100 large-product-container">
+        <div class="card border-0 align-items-center w-100 mb-4 bg-gray">
+          <img src="{{ random_drinkware.image.url }}" class="card-img-top border-black large-product-image mt-2" alt="{{ random_drinkware.name }}">
+          <div class="card-body py-0 my-3">
+            <h5 class="card-title mb-2">Drinkware</h5>
+            <p class="card-text">Enhance your drinking experience with our specially designed items. Crafted to complement our brews, these pieces are perfect additions to any home bar, ensuring every sip is enjoyed to the fullest</p>
+            <a class="btn-gray" href="#">Shop Now</a>
+          </div>
         </div>
       </div>
     </div>
@@ -32,32 +34,19 @@
 <div class="overflow-hidden position-relative py-4" id="merch-section">
   <div class="text-center text-uppercase col-12" id="merch-content">
     <hr class="bg-black my-0">
-    <div class="d-flex justify-content-center my-3">
-      <div class="card border-0 align-items-center mr-2 mx-sm-4">
-        <div class="card-img-top border-black bg-white my-2" style="width: 100%; height: 200px;"></div>
-        <!-- <img src="..." class="card-img-top border-black my-2" alt="..."> -->
-        <div class="card-body py-0">
-          <h5 class="card-title my-0">Merch Name</h5>
-          <p class="card-text"></p>
+    <div class="col-12 col-lg-8 d-flex flex-wrap justify-content-center my-3 mx-auto">
+      {% for merch_item in merch %}
+      <div class="col-12 col-sm-6 col-md-4 d-flex d-flex-column h-100 product-container p-0 mx-4 mb-4">
+        <div class="card border-0 align-items-center">
+          <img src="{{ merch_item.image.url }}" class="card-img-top border-black my-2 product-image" alt="{{ merch_item.name }}">
+          <div class="card-body p-0">
+            <h5 class="card-title mb-2">{{ merch_item.name }}</h5>
+            <hr class="bg-black my-0">
+            <p class="card-text mt-2">£{{ merch_item.price }}</p>
+          </div>
         </div>
       </div>
-      <div class="card border-0 align-items-center ml-2 mx-sm-4">
-        <div class="card-img-top border-black bg-white my-2" style="width: 100%; height: 200px;"></div>
-        <!-- <img src="..." class="card-img-top border-black my-2" alt="..."> -->
-        <div class="card-body py-0">
-          <h5 class="card-title my-0">Merch Name</h5>
-          <p class="card-text"></p>
-        </div>
-      </div>
-      <div class="d-none d-lg-block card border-0 align-items-center mx-sm-4">
-        <div class="card-img-top border-black bg-white my-2" style="width: 100%; height: 200px;"></div>
-        <!-- <img src="..." class="card-img-top border-black my-2" alt="..."> -->
-        <div class="card-body py-0">
-          <h5 class="card-title my-0">Merch Name</h5>
-          <p class="card-text"></p>
-        </div>
-      </div>
-      {{ merch }}
+      {% endfor %}
     </div>
   </div>
 </div>
