--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,10 +2,10 @@
 {% load static %}
 
 {% block content %}
-<div class="overflow-hidden position-relative" id="hero-section">
-  <img src="/static/images/hero.jpg" alt="Hero Image" class="h-100 w-100" id="hero-image">
+<div class="overflow-hidden position-relative hero-section">
+  <img src="/static/images/hero.jpg" alt="Hero Image" class="h-100 w-100 hero-image">
   <div class="overlay position-absolute h-100 w-100"></div>
-  <div class="position-absolute text-center text-white text-uppercase col-12 col-lg-6" id="hero-content">
+  <div class="position-absolute text-center text-white text-uppercase col-12 col-lg-6 hero-content">
     <h1 class="mb-4">Alchemy in every sip, elixir for every soul</h1>
     <a class="btn-gray" href="{% url 'beers' %}">Shop Beers</a>
     <a class="btn-gray" href="{% url 'merch' %}">Shop Merch</a>
@@ -33,7 +33,7 @@
   </div>
 </div>
 
-<div class="d-flex justify-content-center overflow-hidden position-relative height-fit-content" id="taproom-section">
+<div class="d-flex justify-content-center overflow-hidden position-relative height-fit-content gallery-section">
   <img src="/static/images/taproom/taproom1.jpg" alt="Taproom Image 1"
     class="h-100 d-none d-lg-inline-block col-lg-4 mx-0 px-0 taproom-image">
   <img src="/static/images/taproom/taproom2.jpg" alt="Taproom Image 2"
@@ -41,13 +41,13 @@
   <img src="/static/images/taproom/taproom3.jpg" alt="Taproom Image 3"
     class="h-100 d-inline-block col-6 col-lg-4 mx-0 px-0 taproom-image">
   <div class="overlay position-absolute h-100 w-100"></div>
-  <div class="position-absolute text-center text-white text-uppercase col-12 col-lg-6" id="taproom-content">
+  <div class="position-absolute text-center text-white text-uppercase col-12 col-lg-6 gallery-content">
     <h3 class="mb-4"><a href="#" class="hover-gray text-white">Visit Our Taproom</a></h3>
   </div>
 </div>
 
-<div class="overflow-hidden position-relative py-4 col-12 col-lg-8 col-xl-6 offset-lg-2 offset-xl-3" id="our-story-section">
-  <div class="text-center col-12" id="our-story-content">
+<div class="overflow-hidden position-relative py-4 col-12 col-lg-8 col-xl-6 offset-lg-2 offset-xl-3 info-section">
+  <div class="text-center col-12 info-content">
     <h3 class="mb-3 text-uppercase">Our Story</h3>
     <hr class="bg-black my-0">
     <div class="d-flex justify-content-center mt-3">
