--- a/static/css/base.css
+++ b/static/css/base.css
@@ -87,11 +87,11 @@ hr {
     font-size: 0.7rem;
 }
 
-#hero-section {
+.hero-section {
     height: calc(100vh - 151px);
 }
 
-#hero-image, .taproom-image {
+.hero-image, .taproom-image {
     object-fit: cover;
 }
 
@@ -120,7 +120,7 @@ hr {
     max-width: 500px;
 }
 
-#hero-content, #taproom-content {
+.hero-content-content {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
