Added about page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -35,14 +35,14 @@
 
 <div class="d-flex justify-content-center overflow-hidden position-relative height-fit-content gallery-section">
   <img src="/static/images/taproom/taproom1.jpg" alt="Taproom Image 1"
-    class="h-100 d-none d-lg-inline-block col-lg-4 mx-0 px-0 taproom-image">
+    class="h-100 d-none d-lg-inline-block col-lg-4 mx-0 px-0 gallery-image">
   <img src="/static/images/taproom/taproom2.jpg" alt="Taproom Image 2"
-    class="h-100 d-inline-block col-6 col-lg-4 mx-0 px-0 taproom-image">
+    class="h-100 d-inline-block col-6 col-lg-4 mx-0 px-0 gallery-image">
   <img src="/static/images/taproom/taproom3.jpg" alt="Taproom Image 3"
-    class="h-100 d-inline-block col-6 col-lg-4 mx-0 px-0 taproom-image">
+    class="h-100 d-inline-block col-6 col-lg-4 mx-0 px-0 gallery-image">
   <div class="overlay position-absolute h-100 w-100"></div>
   <div class="position-absolute text-center text-white text-uppercase col-12 col-lg-6 gallery-content">
-    <h3 class="mb-4"><a href="#" class="hover-gray text-white">Visit Our Taproom</a></h3>
+    <h3 class="mb-4"><a href="{% url 'taproom' %}" class="hover-gray text-white">Visit Our Taproom</a></h3>
   </div>
 </div>
 
