--- a/pages/templates/pages/taproom.html
+++ b/pages/templates/pages/taproom.html
@@ -21,11 +21,11 @@
 
 <div class="d-flex justify-content-center overflow-hidden position-relative height-fit-content gallery-section">
   <img src="/static/images/taproom/taproom4.jpg" alt="Taproom Image 4"
-    class="h-100 d-none d-lg-inline-block col-lg-4 mx-0 px-0 taproom-image">
+    class="h-100 d-none d-lg-inline-block col-lg-4 mx-0 px-0 gallery-image">
   <img src="/static/images/taproom/taproom5.jpg" alt="Taproom Image 5"
-    class="h-100 d-inline-block col-6 col-lg-4 mx-0 px-0 taproom-image">
+    class="h-100 d-inline-block col-6 col-lg-4 mx-0 px-0 gallery-image">
   <img src="/static/images/taproom/taproom6.jpg" alt="Taproom Image 6"
-    class="h-100 d-inline-block col-6 col-lg-4 mx-0 px-0 taproom-image">
+    class="h-100 d-inline-block col-6 col-lg-4 mx-0 px-0 gallery-image">
 </div>
 
 <div class="overflow-hidden position-relative py-4 info-section">
