--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,8 +12,8 @@
   </div>
 </div>
 
-<div class="overflow-hidden position-relative py-4" id="limited-edition-section">
-  <div class="text-center text-uppercase col-12" id="limited-edition-content">
+<div class="overflow-hidden position-relative py-4 product-section">
+  <div class="text-center text-uppercase col-12 product-content">
     <h3 class="mb-3">Limited Edition Brews</h3>
     <hr class="bg-black my-0">
     <div class="col-12 col-lg-8 d-flex flex-wrap flex-lg-nowrap justify-content-center my-3 mx-auto">
@@ -60,8 +60,8 @@
   </div>
 </div>
 
-<div class="overflow-hidden position-relative py-4 bg-gray" id="merchandise-section">
-  <div class="text-center text-uppercase col-12" id="merchandise-content">
+<div class="overflow-hidden position-relative py-4 bg-gray product-section">
+  <div class="text-center text-uppercase col-12 product-content">
     <h3 class="mb-3">Our Merchandise</h3>
     <hr class="bg-black my-0">
     <div class="col-12 col-lg-8 d-flex flex-wrap flex-lg-nowrap justify-content-center my-3 mx-auto">
