--- a/pages/templates/pages/about.html
+++ b/pages/templates/pages/about.html
@@ -49,12 +49,12 @@
     class="h-100 d-inline-block col-6 mx-0 px-0 gallery-image">
 </div>
 
-<!-- <div class="overflow-hidden position-relative py-4" id="limited-edition-section">
-  <div class="text-center text-uppercase col-12" id="limited-edition-content">
+<div class="overflow-hidden position-relative py-4 product-section">
+  <div class="text-center text-uppercase col-12 product-content">
     <h3 class="mb-3">Limited Edition Brews</h3>
     <hr class="bg-black my-0">
     <div class="col-12 col-lg-8 d-flex flex-wrap flex-lg-nowrap justify-content-center my-3 mx-auto">
-      {% for beer in limited_edition_beers %}
+      {% for beer in random_beers %}
       <div class="col-12 col-sm-6 col-md-4 h-100 product-container p-0 mx-4 mb-4 {% if forloop.counter > 2 %}d-none d-lg-flex{% endif %}">
         <div class="card border-0 align-items-center">
           <img src="{{ beer.image.url }}" class="card-img-top border-black my-2 product-image" alt="{{ beer.name }}">
@@ -68,5 +68,5 @@
     </div>
     <a class="btn-gray" href="{% url 'beers' %}">Shop Now</a>
   </div>
-</div> -->
+</div>
 {% endblock %}
