Added map and address to taproom page

--- a/pages/templates/pages/taproom.html
+++ b/pages/templates/pages/taproom.html
@@ -3,52 +3,78 @@
 
 {% block content %}
 <div class="overflow-hidden position-relative hero-section">
-  <img src="/static/images/taproom/taproom-hero.jpg" alt="Taproom Hero Image" class="h-100 w-100 hero-image">
-  <div class="position-absolute h-100 w-100"></div>
+    <img src="/static/images/taproom/taproom-hero.jpg" alt="Taproom Hero Image" class="h-100 w-100 hero-image">
+    <div class="position-absolute h-100 w-100"></div>
 </div>
 
 <div class="overflow-hidden position-relative py-4 bg-gray info-section">
     <div class="text-center col-12 col-lg-8 col-xl-6 offset-lg-2 offset-xl-3 info-content">
-      <h3 class="mb-3 text-uppercase">Visit Our Taproom</h3>
-      <hr class="bg-black my-0">
-      <div class="d-flex justify-content-center mt-3">
-        <p class="my-0">
-            Step into the world of Alchemy Aleworks at our inviting taproom. Nestled in the heart of Huddersfield, our taproom offers a cosy, welcoming atmosphere where you can enjoy our finely crafted ales right from the source. Experience the magic of our brews, meet fellow beer enthusiasts, and immerse yourself in the alchemical spirit that defines us. Whether you're a regular or a first-time visitor, our taproom is the perfect place to relax, socialize, and savour the unique flavours of our creations. Come join us and discover your new favourite brew!
-        </p>
-      </div>
+        <h3 class="mb-3 text-uppercase">Visit Our Taproom</h3>
+        <hr class="bg-black my-0">
+        <div class="d-flex justify-content-center mt-3">
+            <p class="my-0">
+                Step into the world of Alchemy Aleworks at our inviting taproom. Nestled in the heart of Huddersfield,
+                our taproom offers a cosy, welcoming atmosphere where you can enjoy our finely crafted ales right from
+                the source. Experience the magic of our brews, meet fellow beer enthusiasts, and immerse yourself in the
+                alchemical spirit that defines us. Whether you're a regular or a first-time visitor, our taproom is the
+                perfect place to relax, socialize, and savour the unique flavours of our creations. Come join us and
+                discover your new favourite brew!
+            </p>
+        </div>
     </div>
-  </div>
+</div>
 
 <div class="d-flex justify-content-center overflow-hidden position-relative height-fit-content gallery-section">
-  <img src="/static/images/taproom/taproom4.jpg" alt="Taproom Image 4"
-    class="h-100 d-none d-lg-inline-block col-lg-4 mx-0 px-0 gallery-image">
-  <img src="/static/images/taproom/taproom5.jpg" alt="Taproom Image 5"
-    class="h-100 d-inline-block col-6 col-lg-4 mx-0 px-0 gallery-image">
-  <img src="/static/images/taproom/taproom6.jpg" alt="Taproom Image 6"
-    class="h-100 d-inline-block col-6 col-lg-4 mx-0 px-0 gallery-image">
+    <img src="/static/images/taproom/taproom4.jpg" alt="Taproom Image 4"
+        class="h-100 d-none d-lg-inline-block col-lg-4 mx-0 px-0 gallery-image">
+    <img src="/static/images/taproom/taproom5.jpg" alt="Taproom Image 5"
+        class="h-100 d-inline-block col-6 col-lg-4 mx-0 px-0 gallery-image">
+    <img src="/static/images/taproom/taproom6.jpg" alt="Taproom Image 6"
+        class="h-100 d-inline-block col-6 col-lg-4 mx-0 px-0 gallery-image">
 </div>
 
 <div class="overflow-hidden position-relative py-4 info-section">
-  <div class="text-center col-12 col-lg-8 col-xl-6 offset-lg-2 offset-xl-3 info-content">
-    <h3 class="mb-3 text-uppercase">Taproom Opening Times</h3>
-    <hr class="bg-black my-0">
-    <div class="d-flex justify-content-center mt-3">
-      <p class="my-0">
-        Monday: Closed<br>
-        Tuesday: 4:00 PM - 10:00 PM<br>
-        Wednesday: 4:00 PM - 10:00 PM<br>
-        Thursday: 4:00 PM - 11:00 PM<br>
-        Friday: 2:00 PM - 12:00 AM<br>
-        Saturday: 12:00 PM - 12:00 AM<br>
-        Sunday: 12:00 PM - 8:00 PM
-      </p>
+    <div class="text-center col-12 col-lg-8 col-xl-6 offset-lg-2 offset-xl-3 info-content">
+        <h3 class="mb-3 text-uppercase">Taproom Opening Times</h3>
+        <hr class="bg-black my-0">
+        <div class="d-flex justify-content-center mt-3">
+            <p class="my-0">
+                Monday: Closed<br>
+                Tuesday: 4:00 PM - 10:00 PM<br>
+                Wednesday: 4:00 PM - 10:00 PM<br>
+                Thursday: 4:00 PM - 11:00 PM<br>
+                Friday: 2:00 PM - 12:00 AM<br>
+                Saturday: 12:00 PM - 12:00 AM<br>
+                Sunday: 12:00 PM - 8:00 PM
+            </p>
+        </div>
     </div>
-  </div>
 </div>
 
-<div class="overflow-hidden position-relative py-4 bg-gray map-section">
-  <div class="text-center text-uppercase col-12 map-content">
-    <h1>Map Section</h1>
-  </div>
+<div class="overflow-hidden position-relative bg-gray map-section">
+    <div class="container-fluid p-0 m-0">
+        <div class="row align-items-center">
+            <div class="col-12 col-md-6 order-md-2 text-center p-0 align-content-center" id="taproom-address">
+                <h3 class="mb-3 text-uppercase">Pop In</h3>
+                <hr class="bg-black my-0">
+                <div class="my-3">
+                    <p class="my-0">
+                        Alchemy Aleworks,<br>
+                        123 Brew Lane, Huddersfield, HD1 1AA
+                    </p>
+                </div>
+                <a class="btn-gray" href="https://www.google.com/maps/dir//Huddersfield+HD1+1AA/@53.6484851,-1.783857,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x487bdc6d785bda05:0x6e7062a6902701f4!2m2!1d-1.7815455!2d53.6484382!3e0?entry=ttu" target="_blank">Get Directions</a>
+            </div>
+            <div class="col-12 col-md-6 order-md-1 p-0">
+                <div class="p-0" id="map-content">
+                    <iframe width="100%" height="500" frameborder="0" class="border-0"
+                        referrerpolicy="no-referrer-when-downgrade"
+                        src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCv43SBjRqDKNyLWKHmFIVe1E33p4DZ6Sk&q=HD11AA+England"
+                        allowfullscreen>
+                    </iframe>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
