Added beer detail page and fixed class method bug that displays current beer in the suggested beers section

--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
   <header class="container-fluid fixed-top">
     <!-- Promo Banner -->
     <div id="promo-banner" class="row text-center">
-      <div class="col hover-gray text-white align-items-center justify-content-center">
+      <div class="col text-white align-items-center justify-content-center">
         <p class="text-uppercase font-weight-normal p-0 m-0">Free delivery when you spend £30 or more!</p>
       </div>
     </div>
