--- a/pages/templates/pages/about.html
+++ b/pages/templates/pages/about.html
@@ -51,7 +51,7 @@
 
 <div class="overflow-hidden position-relative py-4 product-section">
   <div class="text-center text-uppercase col-12 product-content">
-    <h3 class="mb-3">Limited Edition Brews</h3>
+    <h3 class="mb-3">Check Out Our Beers</h3>
     <hr class="bg-black my-0">
     <div class="col-12 col-lg-8 d-flex flex-wrap flex-lg-nowrap justify-content-center my-3 mx-auto">
       {% for beer in random_beers %}
