--- a/static/css/base.css
+++ b/static/css/base.css
@@ -183,6 +183,14 @@ hr {
     box-sizing: border-box;
 }
 
+.form-control-button {
+    padding: .375rem .75rem !important;
+    display: block !important;
+    height: calc(1.5em + .75rem + 2px) !important;
+    font-size: 1rem !important;
+    line-height: 1.5 !important;
+}
+
 .btn-gray:hover {
     background-color: #545454;
     color: #fff;
