Added merch detail page and styling

--- a/inventory/templates/inventory/beers.html
+++ b/inventory/templates/inventory/beers.html
@@ -44,10 +44,10 @@
               <h5 class="card-title my-0">{{ beer.name }}</h5>
               <p class="card-text mb-2">{{ beer.type }} / {{ beer.alcohol_content }}%</p>
               <hr class="bg-black my-0">
-              <p class="card-text mt-2k">£{{ beer.price }}</p>
+              <p class="card-text mt-2">£{{ beer.price }}</p>
             </div>
+          </div>
         </a>
-      </div>
       </div>
       {% endfor %}
     </div>
