--- a/pages/templates/pages/about.html
+++ b/pages/templates/pages/about.html
@@ -53,16 +53,20 @@
   <div class="text-center text-uppercase col-12 product-content">
     <h3 class="mb-3">Check Out Our Beers</h3>
     <hr class="bg-black my-0">
-    <div class="col-12 col-lg-8 d-flex flex-wrap flex-lg-nowrap justify-content-center my-3 mx-auto">
+    <div class="col-12 col-lg-8 d-flex flex-wrap flex-lg-nowrap justify-content-center mt-3 mx-auto">
       {% for beer in random_beers %}
       <div class="col-12 col-sm-6 col-md-4 h-100 product-container p-0 mx-4 mb-4 {% if forloop.counter > 2 %}d-none d-lg-flex{% endif %}">
-        <div class="card border-0 align-items-center">
-          <img src="{{ beer.image.url }}" class="card-img-top border-black my-2 product-image" alt="{{ beer.name }}">
-          <div class="card-body p-0">
-            <h5 class="card-title my-0">{{ beer.name }}</h5>
-            <p class="card-text">{{ beer.type }} / {{ beer.alcohol_content }}%</p>
+        <a href="{% url 'beer_detail' beer.id %}" class="text-black hover-gray">
+          <div class="card border-0 align-items-center">
+            <img src="{{ beer.image.url }}" class="card-img-top border-black my-2 product-image" alt="{{ beer.name }}">
+            <div class="card-body p-0">
+              <h5 class="card-title my-0">{{ beer.name }}</h5>
+              <p class="card-text mb-2">{{ beer.type }} / {{ beer.alcohol_content }}%</p>
+              <hr class="bg-black my-0">
+              <p class="card-text mt-2">£{{ beer.price }}</p>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
       {% endfor %}
     </div>
