--- a/inventory/templates/inventory/merch.html
+++ b/inventory/templates/inventory/merch.html
@@ -34,10 +34,10 @@
 <div class="overflow-hidden position-relative py-4" id="merch-section">
   <div class="text-center text-uppercase col-12" id="merch-content">
     <hr class="bg-black my-0">
-    <div class="col-12 col-lg-8 d-flex flex-wrap justify-content-center my-3 mx-auto">
+    <div class="col-12 col-xl-8 d-flex flex-wrap justify-content-center my-3 mx-auto">
       {% for merch_item in merch %}
-      <div class="col-12 col-sm-6 col-md-4 d-flex d-flex-column h-100 product-container p-0 mx-4 mb-4">
-        <a href="{% url 'merch_detail' merch_item.id %}">
+      <div class="col-12 col-sm-6 col-md-4 d-flex d-flex-column h-100 product-container p-0 mb-4">
+        <a href="{% url 'merch_detail' merch_item.id %}" class="text-black hover-gray mx-4">
           <div class="card border-0 align-items-center">
             <img src="{{ merch_item.image.url }}" class="card-img-top border-black my-2 product-image" alt="{{ merch_item.name }}">
             <div class="card-body p-0">
